# nx-fatdrive

./: .gitignore  Cargo.toml  Xargo.toml  aarch64-none-elf.json  build.rs  makew
src/: aligned_slice.rs  buf_scsi.rs  filesystem.rs  lib.rs  main.rs  usb_comm.rs  vecwrapper.rs
src/capi_helpers/: err.rs  idstore.rs  iosupport.rs  iosupport_bindings.rs  mod.rs  nxfatdrive.h  usbfs.rs
src/filesystem/: fatfs_raw.rs  fatfs_rs.rs  mod.rs
