[package]
name = "nx-fatdrive"
version = "0.0.5"
authors = ["scheinkman.ilan@gmail.com"]

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "fatdrive"
path = "src/main.rs"

[dependencies]
scsi = {git = "https://github.com/ischeinkman/scsi-rs"}
fatfs = {git= "https://github.com/rafalh/rust-fatfs", default-features=false, features=["std", "alloc"]}
mbr-nostd = {git = "https://github.com/ischeinkman/mbr-nostd"}
lazy_static = "1.2.0"

[dependencies.libnx-rs]
git = "https://github.com/ischeinkman/libnx-rs"

[dependencies.libc]
version = "0.2"

[dependencies.rand]
version = "0.5"

[replace]
"num_cpus:1.8.0" = { git = 'https://github.com/kloumpt/num_cpus/', branch = 'nintendo-3ds-horizon' }

[features]
default-features = []

[build-dependencies]
cbindgen = "0.8"
